Update sample
